# payment-link

./: .dockerignore  .env.example  .env.example.base-mainnet  .env.example.base-mainnet-kii  .env.example.base-sepolia  .gitignore  Dockerfile  README.md  TEST_PLAN.md  config.py  database.py  docker-compose.override.yaml  docker-compose.yaml  main.py  pyproject.toml  tokens.yaml  tokens.yaml.kii  tokens.yaml.usdc
.github/workflows/: ci.yml
static/: create-payment-link.html  index.html
tests/: __init__.py  conftest.py  test_main.py
